front y nuevos atributos

--- a/front/index.html
+++ b/front/index.html
@@ -1,14 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <img src="img/globantTexto.png" alt="textoglobant">
+        <button><a href="#"></a>Registrarse</button>
+    </header>
+    <div>
+        <h1>Nuestros Trainee</h1>
+    </div>
+    <div class="container">
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="card">
+                <div class="photo">
+                    <img src="img/ana.jpg" alt="Foto ana">
+                </div>
+                <div class="description">
+                    <p class="name">Ana Cordoba Castaño</p>
+                    <p>3178273904</p>
+                    <p>ana.cordoba@globant.com</p>
+                </div>
+            </div>
+        </a>
+
+    </div>
+
+    <footer>
+
+    </footer>
 
     <script src="app.js"></script>
 </body>
+
 </html>
