--- a/front/index.html
+++ b/front/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -22,75 +25,16 @@
         <a href="#">
             <div class="card">
                 <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
+                    <img src="img/cristina.jpeg" alt="Foto ana">
                 </div>
                 <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
+                    <p class="name">Cristina Cordoba Castaño</p>
+                    <p>Trainee Java</p>
+                    <p>Medellin</p>
                 </div>
             </div>
         </a>
-        <a href="#">
-            <div class="card">
-                <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
-                </div>
-                <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="card">
-                <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
-                </div>
-                <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="card">
-                <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
-                </div>
-                <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="card">
-                <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
-                </div>
-                <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="card">
-                <div class="photo">
-                    <img src="img/ana.jpg" alt="Foto ana">
-                </div>
-                <div class="description">
-                    <p class="name">Ana Cordoba Castaño</p>
-                    <p>3178273904</p>
-                    <p>ana.cordoba@globant.com</p>
-                </div>
-            </div>
-        </a>
+
 
     </div>
 
